--- a/common/Utils/ErrorHandler/CMakeLists.txt
+++ b/common/Utils/ErrorHandler/CMakeLists.txt
@@ -1,12 +1,15 @@
-set(LIB_NAME ErrorLogger)
+set(LIB_NAME ErrorHandler)
 
 set(SOURCES
     ErrorLogger.cpp
+    ExceptionThrower.cpp
     )
 
 add_library(${LIB_NAME} ${SOURCES})
 
 target_include_directories(${LIB_NAME}
-                           PRIVATE headers/ErrorLogger
+                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
                            PUBLIC headers
+
+                           PRIVATE headers/ErrorHandler
                            )
