--- a/planszowker_server/CMakeLists.txt
+++ b/planszowker_server/CMakeLists.txt
@@ -1,13 +1,20 @@
-include(${CMAKE_SOURCE_DIR}/cmake/search_paths)
-
 set(EXEC_NAME planszowker_server)
 
 set(SOURCES
     main.cpp
+    NetworkHandler.cpp
+    Server.cpp
     )
 
 add_executable(${EXEC_NAME} ${SOURCES})
 
-find_library(Utils)
+target_link_libraries(${EXEC_NAME}
+                      PRIVATE Utils
 
-target_link_libraries(Utils)
+                      sfml-graphics
+                      sfml-network)
+
+target_include_directories(${EXEC_NAME}
+                           PRIVATE {CMAKE_CURRENT_SOURCE_DIR}
+                           PRIVATE headers/planszowker_server
+                           PRIVATE headers)
