--- a/common/Utils/CMakeLists.txt
+++ b/common/Utils/CMakeLists.txt
@@ -6,8 +6,10 @@ add_library(${LIB_NAME} INTERFACE)
 
 add_subdirectory(ClientInfo)
 add_subdirectory(ErrorHandler)
+add_subdirectory(Logger)
 
 target_link_libraries(${LIB_NAME}
                       INTERFACE ErrorHandler
                       INTERFACE ClientInfo
+                      INTERFACE Logger
                       )
