--- a/common/Network/NetworkQuery/CMakeLists.txt
+++ b/common/Network/NetworkQuery/CMakeLists.txt
@@ -13,4 +13,6 @@ target_include_directories(${LIB_NAME}
                            PRIVATE headers/${LIB_NAME}
                            )
 
-# target_link_libraries(${LIB_NAME})
+target_link_libraries(${LIB_NAME}
+                      PRIVATE ClientInfo
+                      )
