--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ include_directories(common)
 add_subdirectory(common/Utils)
 add_subdirectory(common/Network)
 add_subdirectory(planszowker_server)
+add_subdirectory(planszowker_client)
