WIP: Work on workflows

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,4 +1,6 @@
-name: Super-Linter
+name: Master compilation cmake
+uses: lukka/run-cmake@v3.3
+
 
 # Run this workflow every time a new commit pushed to your repository
 on: push
