--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,10 @@
-name: Master Cmake
+name: CMake Build
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -16,6 +20,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Get SFML sources
+      uses: montudor/action-zip@v0.1.1
+      run: sudo wget https://www.sfml-dev.org/files/SFML-2.5.1-sources.zip
+      with:
+        args: unzip -qq SFML-2.5.1-sources.zip -d SFML-sources
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
