WIP: Added ls -l to show if unzip was successful

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: montudor/action-zip@v0.1.1
         with:
           args: unzip -qq SFML-2.5.1-sources.zip -d SFML-sources
+      - run: ls -l
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
