--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           args: unzip -qq SFML-2.5.1-sources.zip -d SFML-sources
       - run: ls -l
+      - run: cd SFML-sources
+      - run: ls -l
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
