Initial work, some CMake rework done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,5 @@ include_directories(common)
 
 add_subdirectory(common/Utils)
 add_subdirectory(common/Network)
-add_subdirectory(planszowker_server)
-add_subdirectory(planszowker_client)
+add_subdirectory(PlanszowkerServer)
+add_subdirectory(PlanszowkerClient)
