Squashed commit of the following:
commit fe052b6e04fa817196775e037dc62df2ff4b1d84
Author: Dawid Tobor <dawidtobor@op.pl>
Date:   Wed Feb 24 21:48:40 2021 +0100

    Changed to master

commit 5de3903cc7ea0352b096fa165a2de62a7990a033
Author: Dawid Tobor <dawidtobor@op.pl>
Date:   Wed Feb 24 21:43:07 2021 +0100

    Change name

commit b1724627859987c32c4e442d19dbc1d97bc36f55
Author: Dawid Tobor <dawidtobor@op.pl>
Date:   Wed Feb 24 21:41:56 2021 +0100

    Build SFML

Workflow developing

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,4 +1,4 @@
-name: CMake Build
+name: CMake Build with SFML
 
 on:
   push:
@@ -18,9 +18,11 @@ jobs:
       - run: sudo wget https://www.sfml-dev.org/files/SFML-2.5.1-sources.zip
       - uses: montudor/action-zip@v0.1.1
         with:
-          args: unzip -qq SFML-2.5.1-sources.zip -d SFML-sources
-      - run: ls -l
-      - run: cd SFML-sources && ls -l
+          args: unzip -qq SFML-2.5.1-sources.zip
+      - run: mkdir build && cd build
+      - run: cmake -DBUILD_SHARED_LIBS=OFF ../SFML-2.5.1
+      - run: make
+      - run: sudo make install
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
