--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,12 +19,13 @@ jobs:
       - uses: montudor/action-zip@v0.1.1
         with:
           args: unzip -qq SFML-2.5.1-sources.zip
-      - run: |
-        mkdir sfml-build
-        cd sfml-build
-        cmake -DBUILD_SHARED_LIBS=OFF ../SFML-2.5.1
-        make
-        sudo make install
+      - name: Build SFML
+        run: |
+          mkdir sfml-build
+          cd sfml-build
+          cmake -DBUILD_SHARED_LIBS=OFF ../SFML-2.5.1
+          make
+          sudo make install
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
