--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          sudo apt-get install libx11-dev
+          sudo apt-get install xorg-dev
+          sudo apt-get install freeglut3-dev
+          sudo apt-get install libudev-dev
       - run: sudo wget https://www.sfml-dev.org/files/SFML-2.5.1-sources.zip
       - uses: montudor/action-zip@v0.1.1
         with:
