--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,6 +23,7 @@ jobs:
           sudo apt-get install libudev-dev
           sudo apt-get install libopenal-dev
           sudo apt-get install libvorbis-dev
+          sudo apt-get install libflac-dev
       - run: sudo wget https://www.sfml-dev.org/files/SFML-2.5.1-sources.zip
       - uses: montudor/action-zip@v0.1.1
         with:
