--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,7 +44,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Create Build Environment
-      run: cmake -E make_directory ${{github.workspace}}/build
+      run: cmake -DSFML_DIR="/usr/local/lib" -E make_directory ${{github.workspace}}/build
 
     - name: Configure CMake
       shell: bash
