--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,12 +44,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Create Build Environment
-      run: cmake -DSFML_DIR="/usr/local/lib" -E make_directory ${{github.workspace}}/build
+      run: cmake -E make_directory ${{github.workspace}}/build
 
     - name: Configure CMake
       shell: bash
       working-directory: ${{github.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DSFML_DIR="/usr/local/lib"
 
     - name: Build
       working-directory: ${{github.workspace}}/build
