--- a/common/Games/DiceRoller/Server/CMakeLists.txt
+++ b/common/Games/DiceRoller/Server/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(${LIB_NAME}
                              PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
                              PUBLIC headers
 
-                             PRIVATE headers/${LIB_NAME}
+                             PRIVATE headers/DiceRoller
                            )
 
 target_link_libraries(${LIB_NAME}
