WIP: Still in development

--- a/common/Games/CMakeLists.txt
+++ b/common/Games/CMakeLists.txt
@@ -6,10 +6,7 @@ add_library(${LIB_NAME} INTERFACE)
 
 add_subdirectory(DiceRoller)
 
-target_link_libraries(${LIB_NAME}
-                      INTERFACE NetworkHandler
-                      INTERFACE NetworkQuery
-                      )
+target_link_libraries(${LIB_NAME})
 
 target_include_directories(${LIB_NAME}
                              INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
