--- a/common/Games/DiceRoller/Client/CMakeLists.txt
+++ b/common/Games/DiceRoller/Client/CMakeLists.txt
@@ -1,14 +1,16 @@
 set(LIB_NAME DiceRollerClient)
 
 set(SOURCES
-      dummy.cpp
+      DiceRollerConsoleView.cpp
     )
+
+include_directories(${Games_SOURCE_DIR}/headers) # Include Games' common headers. TODO: Check for any better method ;)
 
 add_library(${LIB_NAME} ${SOURCES})
 
 target_include_directories(${LIB_NAME}
-                           PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-                           PUBLIC headers
+                             PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+                             PUBLIC headers
 
-                           PRIVATE headers/${LIB_NAME}
+                             PRIVATE headers/DiceRoller
                            )
