WIP: Working callbacks from view. Need mutexes

--- a/common/Games/CMakeLists.txt
+++ b/common/Games/CMakeLists.txt
@@ -10,5 +10,5 @@ target_link_libraries(${LIB_NAME})
 
 target_include_directories(${LIB_NAME}
                              INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
-                             INTERFACE headers/Games
+                             INTERFACE headers
                            )
