--- a/common/Games/DiceRoller/Client/CMakeLists.txt
+++ b/common/Games/DiceRoller/Client/CMakeLists.txt
@@ -2,14 +2,21 @@ set(LIB_NAME DiceRollerClient)
 
 set(SOURCES
       DiceRollerConsoleView.cpp
+      DiceRollerController.cpp
     )
 
-include_directories(${Games_SOURCE_DIR}/headers) # Include Games' common headers. TODO: Check for any better method ;)
+add_library(${LIB_NAME} STATIC ${SOURCES})
 
-add_library(${LIB_NAME} ${SOURCES})
+target_link_libraries(${LIB_NAME}
+                        PRIVATE Logger
+                        PRIVATE ErrorHandler
+                        INTERFACE Games
+                      )
 
 target_include_directories(${LIB_NAME}
-                             PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
+                             PRIVATE ${Games_SOURCE_DIR}/headers
+                             PRIVATE ${DiceRoller_SOURCE_DIR}/headers
+                             PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
                              PUBLIC headers
 
                              PRIVATE headers/DiceRoller
