--- a/PlanszowkerServer/CMakeLists.txt
+++ b/PlanszowkerServer/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(${EXEC_NAME} ${SOURCES})
 
 target_link_libraries(${EXEC_NAME}
                       PRIVATE Utils
-                      PRIVATE Network
+                      PRIVATE DiceRoller
 
                       sfml-graphics
                       sfml-network
