--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,7 +34,7 @@ jobs:
           mkdir sfml-build
           cd sfml-build
           cmake -DBUILD_SHARED_LIBS=OFF ../SFML-2.5.1
-          make
+          make -j32
           sudo make install
           sudo chmod 777 -R /usr/local/lib
           sudo chmod 777 -R /usr/local/include
@@ -46,17 +46,23 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Create Build Environment
-      run: cmake -E make_directory ${{github.workspace}}/build
+      #run: cmake -E make_directory ${{github.workspace}}/build
+      run: |
+        chmod 777 -R /usr/local/lib
+        chmod 777 -R /usr/local/include
+        mkdir build && cd build
+        cmake -DSFML_DIR="/usr/local/lib" ..
+        make -j32
 
-    - name: Configure CMake
-      shell: bash
-      working-directory: ${{github.workspace}}/build
-      run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DSFML_DIR="/usr/local/lib"
+    #- name: Configure CMake
+    #  shell: bash
+    #  working-directory: ${{github.workspace}}/build
+    #  run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DSFML_DIR="/usr/local/lib"
 
-    - name: Build
-      working-directory: ${{github.workspace}}/build
-      shell: bash
-      run: cmake --build . --config $BUILD_TYPE
+    #- name: Build
+    #  working-directory: ${{github.workspace}}/build
+    #  shell: bash
+    #  run: cmake --build . --config $BUILD_TYPE
 
     #- name: Test
     #  working-directory: ${{github.workspace}}/build
