--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,8 +36,6 @@ jobs:
           cmake -DBUILD_SHARED_LIBS=OFF ../SFML-2.5.1
           make -j32
           sudo make install
-          sudo chmod 777 -R /usr/local/lib
-          sudo chmod 777 -R /usr/local/include
   build:
     needs: get-sfml
     name: Build
@@ -51,7 +49,7 @@ jobs:
         sudo chmod 777 -R /usr/local/lib
         sudo chmod 777 -R /usr/local/include
         mkdir build && cd build
-        cmake -DSFML_DIR="/usr/local/lib/cmake/SFML" ..
+        cmake -DSFML_ROOT="/usr/local/lib/cmake/SFML" ..
         make -j32
 
     #- name: Configure CMake
