--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,8 +46,8 @@ jobs:
     - name: Create Build Environment
       #run: cmake -E make_directory ${{github.workspace}}/build
       run: |
-        sudo chmod 777 -R /usr/local/lib
-        sudo chmod 777 -R /usr/local/include
+        ls -l /usr/local/lib
+        ls -l /usr/local/include
         mkdir build && cd build
         cmake .. -DSFML_DIR="/usr/local/lib/cmake/SFML/"
         make -j32
