WIP: Refactor according to new idea - still in progress

--- a/common/Games/CMakeLists.txt
+++ b/common/Games/CMakeLists.txt
@@ -2,13 +2,19 @@ set(LIB_NAME Games)
 
 project(${LIB_NAME})
 
-add_library(${LIB_NAME} INTERFACE)
+set(SOURCES
+      GameCreator.cpp
+    )
+
+add_library(${LIB_NAME} STATIC ${SOURCES})
 
 add_subdirectory(DiceRoller)
 
 target_link_libraries(${LIB_NAME})
 
 target_include_directories(${LIB_NAME}
-                             INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
-                             INTERFACE headers
+                             PUBLIC headers
+
+                             PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
+                             PRIVATE headers/Games
                            )
