--- a/common/Games/DiceRoller/Client/CMakeLists.txt
+++ b/common/Games/DiceRoller/Client/CMakeLists.txt
@@ -9,14 +9,13 @@ set(SOURCES
 add_library(${LIB_NAME} STATIC ${SOURCES})
 
 target_link_libraries(${LIB_NAME}
-                        PRIVATE Logger
-                        PRIVATE ErrorHandler
-                        INTERFACE Games
+                        PUBLIC Logger
+                        PUBLIC ErrorHandler
+                        PUBLIC Games
+                        PUBLIC DiceRoller
                       )
 
 target_include_directories(${LIB_NAME}
-                             PRIVATE ${Games_SOURCE_DIR}/headers
-                             PRIVATE ${DiceRoller_SOURCE_DIR}/headers
                              PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
                              PUBLIC headers
 
