--- a/common/Games/DiceRoller/Server/CMakeLists.txt
+++ b/common/Games/DiceRoller/Server/CMakeLists.txt
@@ -2,16 +2,12 @@ set(LIB_NAME DiceRollerServer)
 
 set(SOURCES
       ServerHandler.cpp
-      ServerLogic.cpp
     )
 
 add_library(${LIB_NAME} ${SOURCES})
 
 target_include_directories(${LIB_NAME}
-                             PRIVATE ${Games_SOURCE_DIR}/headers
-                             PRIVATE ${DiceRoller_SOURCE_DIR}/headers
                              PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
-
                              PRIVATE headers/DiceRoller
 
                              PUBLIC headers
@@ -19,5 +15,6 @@ target_include_directories(${LIB_NAME}
 
 target_link_libraries(${LIB_NAME}
                         PUBLIC NetworkHandler
-                        INTERFACE Games
+                        PUBLIC Games
+                        PUBLIC DiceRoller
                       )
