--- a/PlanszowkerServer/CMakeLists.txt
+++ b/PlanszowkerServer/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCES
 add_executable(${EXEC_NAME} ${SOURCES})
 
 target_link_libraries(${EXEC_NAME}
-                      PRIVATE Utils
+                      PRIVATE ErrorHandler
                       PRIVATE DiceRoller
 
                       sfml-graphics
