WIP: More DiceRoller related topics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ include_directories(common)
 add_subdirectory(common/Utils/ClientInfo)
 add_subdirectory(common/Utils/ErrorHandler)
 add_subdirectory(common/Utils/Logger)
+add_subdirectory(common/Utils/CompilerUtils)
+add_subdirectory(common/Utils/TimeMeasurement)
+add_subdirectory(common/Utils/Rng)
 add_subdirectory(common/Network/NetworkHandler)
 add_subdirectory(common/Games)
 add_subdirectory(PlanszowkerServer)
