--- a/common/Games/DiceRoller/Server/CMakeLists.txt
+++ b/common/Games/DiceRoller/Server/CMakeLists.txt
@@ -18,4 +18,7 @@ target_link_libraries(${LIB_NAME}
                         PUBLIC NetworkHandler
                         PUBLIC Games
                         PUBLIC DiceRoller
+                        PUBLIC Rng
+                        PUBLIC TimeMeasurement
+                        PUBLIC CompilerUtils
                       )
