WIP: Console DiceRoller is working

--- a/common/Games/CMakeLists.txt
+++ b/common/Games/CMakeLists.txt
@@ -4,6 +4,7 @@ project(${LIB_NAME})
 
 set(SOURCES
       GameCreator.cpp
+      GraphicalView.cpp
     )
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
