--- a/PlanszowkerServer/CMakeLists.txt
+++ b/PlanszowkerServer/CMakeLists.txt
@@ -12,6 +12,9 @@ target_link_libraries(${EXEC_NAME}
 
                       sfml-graphics
                       sfml-network
+
+                      -static-libgcc
+                      -static-libstdc++
                       )
 
 target_include_directories(${EXEC_NAME}
