--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,31 +2,22 @@ name: CMake Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ feature/DiceRoller ]
   pull_request:
-    branches: [ master ]
+    branches: [ feature/DiceRoller ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
-  get-sfml:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: sudo wget https://www.sfml-dev.org/files/SFML-2.5.1-sources.zip
-      - uses: montudor/action-zip@v0.1.1
-        with:
-          args: unzip -qq SFML-2.5.1-sources.zip -d SFML-sources
-      - run: ls -l
-      - run: cd SFML-sources && ls -l
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    container: ubuntu-planszowker
+    runs-on: ubuntu-planszowker
 
     steps:
     - uses: actions/checkout@v2
