--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,9 @@ name: CMake Build
 
 on:
   push:
-    branches: [ feature/DiceRoller ]
+    branches: [ master ]
   pull_request:
-    branches: [ feature/DiceRoller ]
+    branches: [ master ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
