--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,8 +16,12 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    container: ubuntu-planszowker
     runs-on: ubuntu-planszowker
+    container:
+      image: ghcr.io/ishiguro96/ubuntu-planszowker:latest
+      credentials:
+        username: ishiguro96
+        password: ${{ secrets.DOCKER_ACTIONS }}
 
     steps:
     - uses: actions/download-artifact@v2
