--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,35 +24,31 @@ jobs:
         password: ${{ secrets.DOCKER_ACTIONS }}
 
     steps:
-    - uses: actions/download-artifact@v2
-      with:
-        path: /usr/local/
-    
-    - name: Display structure of downloaded files
-      run: ls -R
-      working-directory: /usr/local
-      
-    - uses: actions/checkout@v2
-    - name: Create Build Environment
-      #run: cmake -E make_directory ${{github.workspace}}/build
-      run: |
-        ls -l /usr/local/lib
-        ls -l /usr/local/include
-        mkdir build && cd build
-        cmake .. -DSFML_DIR="/usr/local/lib/cmake/SFML/"
-        make -j32
+      - uses: actions/checkout@v2
+      - name: Create Build Environment
+        # Some projects don't allow in-source building, so create a separate build directory
+        # We'll use this as our working directory for all subsequent commands
+        run: cmake -E make_directory ${{github.workspace}}/build
 
-    #- name: Configure CMake
-    #  shell: bash
-    #  working-directory: ${{github.workspace}}/build
-    #  run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DSFML_DIR="/usr/local/lib"
+      - name: Configure CMake
+        # Use a bash shell so we can use the same syntax for environment variable
+        # access regardless of the host operating system
+        shell: bash
+        working-directory: ${{github.workspace}}/build
+        # Note the current convention is to use the -S and -B options here to specify source
+        # and build directories, but this is only available with CMake 3.13 and higher.
+        # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
+        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
-    #- name: Build
-    #  working-directory: ${{github.workspace}}/build
-    #  shell: bash
-    #  run: cmake --build . --config $BUILD_TYPE
+      - name: Build
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        # Execute the build.  You can specify a specific target with "--target <NAME>"
+        run: cmake --build . --config $BUILD_TYPE
 
-    #- name: Test
-    #  working-directory: ${{github.workspace}}/build
-    #  shell: bash
-    #  run: ctest -C $BUILD_TYPE
+      - name: Test
+        working-directory: ${{github.workspace}}/build
+        shell: bash
+        # Execute tests defined by the CMake configuration.
+        # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+        run: ctest -C $BUILD_TYPE
