--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Configure CMake
         shell: bash
-        working-directory: ${{github.workspace}}/build
-        run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
+        run: cd ${{github.workspace}}/build && cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
         working-directory: ${{github.workspace}}/build
