--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,21 +18,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create Build Environment
-        working-directory: ${{github.workspace}}/build
+        working-directory: ${{home}}/build
         shell: bash
-        run: cmake -E make_directory ${{github.workspace}}/build
+        run: echo ${{home}}; mkdir ${{home}}/build
 
       - name: Configure CMake
         working-directory: ${{github.workspace}}/build
         shell: bash
-        run: cd ${{github.workspace}}/build && cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
+        run: cd ${{home}}/build && cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        working-directory: ${{github.workspace}}/build
+        working-directory: ${{home}}/build
         shell: bash
         run: cmake --build . --config $BUILD_TYPE
 
       - name: Test
-        working-directory: ${{github.workspace}}/build
+        working-directory: ${{home}}/build
         shell: bash
         run: ctest -C $BUILD_TYPE
