--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,21 +18,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create Build Environment
-        working-directory: ${{home}}/build
         shell: bash
-        run: echo ${{home}}; mkdir ${{home}}/build
+        run: mkdir build
 
       - name: Configure CMake
-        working-directory: ${{github.workspace}}/build
+        working-directory: build
         shell: bash
-        run: cd ${{home}}/build && cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
+        run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        working-directory: ${{home}}/build
+        working-directory: build
         shell: bash
-        run: cmake --build . --config $BUILD_TYPE
+        run: cmake --build . --config Release
 
       - name: Test
-        working-directory: ${{home}}/build
+        working-directory: build
         shell: bash
-        run: ctest -C $BUILD_TYPE
+        run: ctest -C Release
