--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Configure CMake
         working-directory: build
         shell: bash
-        run: cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
+        run: ls -al; pwd; cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
         working-directory: build
