--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Configure CMake
         shell: bash
-        run: cd build && echo ${{github.workspace}}; ls -al ${{github.workspace}}; cmake ${{github.workspace}} -DCMAKE_BUILD_TYPE=Release
+        run: cd build && ls -al /github/workspace/; cmake /github/workspace/ -DCMAKE_BUILD_TYPE=Release
 
       - uses: actions/checkout@v2
       - name: Build
