--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Configure CMake
         shell: bash
-        run: ls -al / #cmake /github/workspace/ -DCMAKE_BUILD_TYPE=Release
+        run: make .. -DCMAKE_BUILD_TYPE=Release
 
       - uses: actions/checkout@v2
       - name: Build
